tests/integration/fail/lists_len_wrong_type.kr
# Test: len() requires a list
# Expected: Fail with "Function 'len' requires a list argument"

call len with 42

